# sshit

./: .gitignore  Cargo.toml  Dockerfile  README.md  changelog.md
.cargo/: config.toml
.cursor/rules/: rust-project-special.mdc  rust.mdc
examples/: .dockerignore  Dockerfile  README.md  build-docker.sh  ssh_server_example.rs
res/: vsc.sh
src/: command_handler.rs  key_manager.rs  lib.rs  logging.rs  main.rs  sftp_handler.rs  ssh_client.rs  ssh_server.rs  utils.rs
tests/: ssh_server_tests.rs
