[package]
name = "ssh-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ed25519-dalek = "1.0"
rand = "0.7"
rand_core = "0.5"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
futures = "0.3"
async-trait = "0.1"
ssh2 = "0.9"
base64 = "0.13"
